--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-builder-bob": "^0.20.0",
+    "react-native-reanimated": "3.3.0",
     "release-it": "^15.0.0",
     "typescript": "^5.0.2"
   },
@@ -156,8 +157,5 @@
         }
       ]
     ]
-  },
-  "dependencies": {
-    "react-native-reanimated": "^3.6.1"
   }
 }
